minio/cluster-internal-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: default
  labels:
    app: minio-service
spec:
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: http
  selector:
    app: minio
