minio/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "60s"
    nginx.org/client-max-body-size: "5000m"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - minio.example.com
    secretName: minio.example.com-tls
  rules:
  - host: minio.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
